<resources>
    <string name="app_name">dut_app_mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_profil">Profil</string>
    <string name="profile_pic">profile picture</string>
    <string name="profile_pseudo">pseudo</string>
    <string name="temps_lecture">Temps passé en lecture</string>
    <string name="nb_livres_lus">Livres lus</string>
    <string name="label_livre">Mes Livres</string>
    <string name="livres_lire">Livres à lire</string>
    <string name="prompt_recherche">Recherche</string>
    <string name="title_livre">Livres</string>
    <string name="title_decouvrir">Découvrir</string>
    <string name="booksNames">booksNames</string>
</resources>
