<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profil">

    <fragment
        android:id="@+id/navigation_livre"
        android:name="com.example.dut_app_mobile.ui.home.HomeFragment"
        android:label="@string/title_livre"
        tools:layout="@layout/livre" />

    <fragment
        android:id="@+id/navigation_decouvrir"
        android:name="com.example.dut_app_mobile.ui.dashboard.DashboardFragment"
        android:label="@string/title_decouvrir"
        tools:layout="@layout/decouvrir" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.dut_app_mobile.ui.notifications.NotificationsFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/profile" />
</navigation>
