<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/profile_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="3dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_pseudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/profile_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="454dp"
        android:text="@string/profile_pseudo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_values"
        android:layout_width="match_parent"
        android:layout_height="453dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pseudo">

        <RelativeLayout
            android:id="@+id/profile_temps_lecture"
            android:layout_width="173dp"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="362dp"
            android:background="@drawable/profile_round_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_nb_livres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/temps_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="51dp"
                android:text="@string/temps_lecture"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/val_temps_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="91dp"
                android:layout_marginBottom="14dp"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_nb_livres"
            android:layout_width="173dp"
            android:layout_height="81dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="362dp"
            android:background="@drawable/profile_round_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nb_livres_lus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="57dp"
                android:layout_marginBottom="51dp"
                android:text="@string/nb_livres_lus"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/val_nb_livres_lus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="87dp"
                android:layout_marginBottom="14dp"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/label_livre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/label_livre"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_temps_lecture" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="93dp"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_livre"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
